# rag-qa

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  pyproject.toml
backend/scripts/: clean_captions.py  fix_version_captions.py  ingest_pdfs.py  scan_blank_images.py  verify_setup.py
backend/src/ragqa/: __init__.py  config.py  main.py
backend/src/ragqa/api/: deps.py  routes.py  schemas.py
backend/src/ragqa/core/: errors.py  logging.py  openai_http.py
backend/src/ragqa/generation/: __init__.py  llm.py  prompts.py
backend/src/ragqa/ingestion/: __init__.py  binder.py  captioner.py  chunker.py  parser.py  parser_pymupdf.py  parser_types.py  pipeline.py
backend/src/ragqa/models/: __init__.py  chunks.py
backend/src/ragqa/retrieval/: __init__.py  embeddings.py  hybrid.py  query_rewriter.py  rerank.py  vectorstore.py
backend/src/ragqa/storage/: __init__.py  chat_store.py
backend/tests/: test_health.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: chat-interface.tsx  chat-sidebar.tsx  chat-widget.tsx  citation.tsx  image-gallery.tsx  message.tsx  pdf-viewer.tsx
frontend/src/components/ui/: button.tsx  toggle.tsx
frontend/src/lib/: api.ts  chat-history.ts  utils.ts
frontend/src/types/: api.ts
infra/aws/: README.md  iam-deploy-policy.json
infra/aws/scripts/: build-and-push-backend.sh  set-secrets.sh
infra/aws/terraform/: .gitignore  example.tfvars  main.tf  outputs.tf  providers.tf  variables.tf
(+1 files in other folders)
